	* added new test notwellfounded2.hex for guess and check model builder (should test minimality of disjunctions) [this test crashes dlvhex trunk/]
	* added central auxiliary constant management method getAuxiliaryConstantSymbol() to Registry, PluginAtom no longer manages its own auxiliaries

2010-11-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure.ac: Set error-limit to 5 for clang.
	* testsuite/Makefile.am: Likewise.

2010-11-05  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* examples/Makefile.am (EXTRA_DIST): Add minimality and
	builtin_safety{1,2} test cases.

2010-10-21  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* examples/Makefile.am: Add builtin_safety2.hex for new DLV
	release 2010-10-14.
	* examples/builtin_safety1.hex: Likewise.
	* examples/builtin_safety2.hex: Likewise.
	* examples/tests/dlvhextests.test: Likewise.
	* examples/tests/builtin_safety1.out: Likewise.
	* examples/tests/builtin_safety2.out: Likewise.

2010-08-16  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/dlvhex/BoostComponentFinder.cpp: Applied the nice part of the
	clang diff (the one that does not deal with a clang bug).
	* Modelbuilding-Concept.txt: Thoughts on online vs offline and
	projected vs non projected model building.

2010-08-04  Peter Schueller  <ps@kr.tuwien.ac.at>

	* m4/boost.m4: Temporary fix for iostreams configure check for
	boost versions >=1.44.

2010-07-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* TODO: Update.

	* include/dlvhex/Makefile.am: Highlight which header file belongs
	to which library.

2010-07-17  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	Release version 1.7.1.

	* configure.ac: Bump version to 1.7.1.

	* NEWS: Describe changes to 1.7.1.

	* MAINTAINER-README: Update.
	* README: Likewise.

2010-07-16  Peter Schueller  <ps@kr.tuwien.ac.at>

	* clang.diff: Added diff to make it build with clang (debug stream does
	not work, as boost::iostream currently does not work with clang, there
	are other strange issues)
