@@ -5,5 +5,6 @@ in2(c).
 c(i).
 c(j).
 
-bar(X) :- &testB[IN,IN](X), in0(IN).
-foo(X) :- &testB[IN,IN](X), in2(IN).
+% both inputs of testB are predicate inputs
+bar(X) :- &testB[nil,nil](X).
+foo(X) :- &testB[c,c](X).
