@@ -22,6 +22,7 @@
 	* plugins must now return PluginAtomPtrs/PluginConverterPtrs/... that use a "deleter" compiled into the respective plugin (see PluginInterface.h)
 	* added new test notwellfounded2.hex for guess and check model builder (should test minimality of disjunctions) [this test crashes dlvhex trunk/]
 	* added central auxiliary constant management method getAuxiliaryConstantSymbol() to Registry, PluginAtom no longer manages its own auxiliaries
+	* predicate inputs of external atoms no longer may be variables, this was possible in dlvhex 1.X but it was not correctly implemented (see variable_input_predicates.hex example in trunk/) and we need a new implementation strategy for doing that. this change causes the changes to extatom5.hex and extatom6.hex testcases
 
 2010-11-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
